trying to fix landing page on mobile

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -192,7 +192,6 @@ button, .button:hover {
 	background-repeat: no-repeat;
 	background-position: top center;
 	width: 100%;
-	min-height: 400px;
 	display: table;
 	.banner_content {
 		display: table-cell;
